--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,8 +28,13 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven and run tests
+    - name: Build with Maven
       run: mvn clean test -Dbrowser=chrome-headless
+
+    - name: Set up Allure
+      uses: actions/setup-allure@v1
+      with:
+        allure-version: '2.23.0'
 
     - name: Generate Allure Report
       run: |
