--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,7 @@ jobs:
       run: mvn clean test -Dbrowser=chrome-headless
 
     - name: Set up Allure
-      uses: actions/setup-allure@v1
+      uses: allure-framework/setup-allure@v2
       with:
         allure-version: '2.23.0'
 
