--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,22 +32,15 @@ jobs:
       run: mvn clean test -Dbrowser=chrome-headless
 
     - name: Set up Allure
-      uses: allure-framework/setup-allure@v2
+      uses: allure-framework/setup-allure@v2 # Correct action name and indentation
       with:
-        allure-version: '2.20.1'
+        allure-version: '2.20.1' # Or latest version
 
     - name: Generate Allure Report
-      run: |
-        allure generate allure-results --clean -o allure-report
-        ls -R allure-report
+      run: allure generate allure-results -o allure-report
 
-    - name: Upload Allure Report
+    - name: Upload Allure Report as artifact
       uses: actions/upload-artifact@v3
       with:
-        name: allure-report
-        path: allure-report
-
-    - name: Publish Allure Report
-      uses: simple-elf/allure-report-action@v1
-      with:
-        report_directory: allure-report
+         name: allure-report
+         path: allure-report
