--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,8 +32,10 @@ jobs:
     - name: Build with Maven
       run: mvn clean test -Dbrowser=chrome-headless
 
-    - name: Serve allure
-      run: mvn allure:serve
+    - name: Set up Allure
+      uses: allure-framework/setup-allure@v3
+      with:
+        allure-version: '2.20.1'
 
     - name: Generate Allure Report
       run: ./.allure/allure-2.23.0/bin/allure generate allure-results --clean -o allure-report
