--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,16 +32,26 @@ jobs:
     - name: Build with Maven
       run: mvn clean test -Dbrowser=chrome-headless
 
-    - name: Set up Allure
-      uses: allure-framework/setup-allure@v3
+    - name: Load test report history
+      uses: actions/checkout@v2
+      if: always()
+      continue-on-error: true
       with:
-        allure-version: '2.20.1'
+        ref: gh-pages
+        path: gh-pages
 
-    - name: Generate Allure Report
-      run: ./.allure/allure-2.23.0/bin/allure generate allure-results --clean -o allure-report
-
-    - name: Upload Allure Report
-      uses: actions/upload-artifact@v4
+    - name: Build test report
+      uses: simple-elf/allure-report-action@v1.7
+      if: always()
       with:
-        name: allure-report
-        path: allure-report
+        gh_pages: gh-pages
+        allure_history: allure-history
+        allure_results: ./allure-results
+
+    - name: Publish test report
+      uses: peaceiris/actions-gh-pages@v4
+      if: always()
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: gh-pages
+        publish_dir: allure-history
