--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,3 +47,11 @@ jobs:
         gh_pages: gh-pages
         allure_history: allure-history
         allure_results: ./allure-results
+
+    - name: Publish test report
+      uses: peaceiris/actions-gh-pages@v4
+      if: always()
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: gh-pages
+        publish_dir: allure-history
