--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,6 +51,7 @@ jobs:
     - name: Publish test report
       uses: peaceiris/actions-gh-pages@v4
       if: always()
+      continue-on-error: true
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
