--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,13 @@ jobs:
     - name: Build with Maven
       run: mvn clean test
 
+    - name: Upload Logs
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-logs
+        path: ./logs
+
     - name: Load test report history
       uses: actions/checkout@v4
       if: always()
