--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,15 +29,11 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Build with Maven
-      run: mvn clean test
+    - name: Install Dependencies
+      run: mvn clean install -DskipTests
 
-    - name: Upload Logs
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-logs
-        path: ./logs
+    - name: Build with Maven
+      run: mvn test -Dbrowser=chrome-headless
 
     - name: Load test report history
       uses: actions/checkout@v4
